--- a/.travis.yml
+++ b/.travis.yml
@@ -21,13 +21,14 @@ after_success:
     else
       echo $QUAY_PASS | docker login -u $QUAY_USER --password-stdin quay.io;
       
-      docker build -t quay.io/${QUAY_REPOSITORY}:${TRAVIS_COMMIT} -f Dockerfile.ci . ;
+      DOCKER_TAG=${TRAVIS_BRANCH}-$(echo ${TRAVIS_COMMIT} | head -c7);
+      docker build -t quay.io/${QUAY_REPOSITORY}:${DOCKER_TAG} -f Dockerfile.ci . ;
       
-      echo "Pushing to quay.io/${QUAY_REPOSITORY}:${TRAVIS_COMMIT}";
-      docker push quay.io/${QUAY_REPOSITORY}:${TRAVIS_COMMIT};
+      echo "Pushing to quay.io/${QUAY_REPOSITORY}:${DOCKER_TAG}";
+      docker push quay.io/${QUAY_REPOSITORY}:${DOCKER_TAG};
       
       echo "Pushing to quay.io/${QUAY_REPOSITORY}:${TRAVIS_TAG}";
-      docker tag quay.io/${QUAY_REPOSITORY}:${TRAVIS_COMMIT} quay.io/${QUAY_REPOSITORY}:${TRAVIS_TAG};
+      docker tag quay.io/${QUAY_REPOSITORY}:${DOCKER_TAG} quay.io/${QUAY_REPOSITORY}:${TRAVIS_TAG};
       docker push quay.io/${QUAY_REPOSITORY}:${TRAVIS_TAG};
     fi
  
