--- a/.travis.yml
+++ b/.travis.yml
@@ -27,8 +27,8 @@ after_success:
       echo "Pushing to quay.io/${QUAY_REPOSITORY}:${DOCKER_TAG}";
       docker push quay.io/${QUAY_REPOSITORY}:${DOCKER_TAG};
       
-      echo "Pushing to quay.io/${QUAY_REPOSITORY}:${TRAVIS_TAG}";
-      docker tag quay.io/${QUAY_REPOSITORY}:${DOCKER_TAG} quay.io/${QUAY_REPOSITORY}:${TRAVIS_TAG};
-      docker push quay.io/${QUAY_REPOSITORY}:${TRAVIS_TAG};
+      echo "Pushing to quay.io/${QUAY_REPOSITORY}:${TRAVIS_BRANCH}";
+      docker tag quay.io/${QUAY_REPOSITORY}:${DOCKER_TAG} quay.io/${QUAY_REPOSITORY}:${TRAVIS_BRANCH};
+      docker push quay.io/${QUAY_REPOSITORY}:${TRAVIS_BRANCH};
     fi
  
